# daily-py

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
asr_serve/: DESIGN.md  requirements.txt  server.py  start.sh
daily_py/: TTT.py  __init__.py  cli.py  file_handler.py  file_handler_use.py  image_handler.py  media_video_pipeline.py  media_video_uploader.py  test.py  xfan_video_downloader.py  xfan_video_instruct_updater.py
daily_py/db/: __init__.py  base_repository.py  connection.py
daily_py/db/models/: __init__.py  media_resource.py  media_video.py  novel.py  recommond.py  toy_model_video.py  xfan_video.py
daily_py/db/repositories/: __init__.py  media_video_repository.py  (+5 more)
daily_py/s3/: __init__.py  uploader.py
daily_py/services/: __init__.py  llm_chat.py  model_downloader.py  model_scope.py
daily_py/ui/: __init__.py  file_utility_gui.py  forced_align_gui.py  llm_chat_gui.py  media_preview_gui.py  media_tool_gui.py  media_upload_gui.py  media_video_manage_gui.py  model_download_gui.py  rename_gui.py  text_diff_gui.py  text_tool_gui.py  xfan_video_gui.py
docs/sql/: cn_novel.sql  novel.sql  recommond_table.sql  xfan_video.sql  xgame.sql
examples/: file_workflow_demo.py  rename_recursive_demo.py  run_batch_rename_recursive.py
scripts/: pw_extract_frame.ps1  run_media_upload.py  run_media_upload_gui.py
tests/: test_db.py  test_file_handler.py  test_image_handler.py  test_media_video_uploader.py  test_s3.py
tools/: rename_batch.bat  rename_batch_context.reg  rename_ext_launcher.py  rename_gui.bat
(+25 files in other folders)
